--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ apps:
     path: /app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker movie_app.main:app
+    startCommand: uvicorn movie_app.main:app --host 0.0.0.0 --port 8000
