--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,4 @@ apps:
     env: python
     pythonVersion: Python 3.12
     buildCommand: pip install -r requirements.txt
-    startCommand: python -m uvicorn app.main:app --host 0.0.0.0 --port 8000
-    
+    startCommand: python -m uvicorn main:app --host 0.0.0.0 --port 8000
