--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 bcrypt==4.2.0
 bson==0.5.10
+bson==0.6.0
 certifi==2024.7.4
 cffi==1.17.0
 click==8.1.7
@@ -32,6 +33,7 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 PyJWT==2.9.0
 pymongo==4.8.0
+pymongo==4.10.0
 pytest==8.3.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
